fix(detailed pages): Make delete btns more visible on detail pages
update breakpoint, btn look and text and new hook

--- a/src/sass/_instance_detail_page.scss
+++ b/src/sass/_instance_detail_page.scss
@@ -9,12 +9,6 @@
     }
   }
 
-  .delete-instance-btn {
-    margin: 0;
-    padding-left: $sph--x-large;
-    padding-right: $sph--x-large;
-  }
-
   .p-panel__content {
     margin-top: -$spv--medium;
     padding-bottom: 0;
