--- a/src/sass/_profile_detail_page.scss
+++ b/src/sass/_profile_detail_page.scss
@@ -1,10 +1,4 @@
 .profile-detail-page {
-  .delete-profile-btn {
-    margin: 0;
-    padding-left: $sph--x-large;
-    padding-right: $sph--x-large;
-  }
-
   .p-panel__content {
     margin-top: -$spv--medium;
     padding-bottom: 0;
